--- a/week1.html
+++ b/week1.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1>CIT 261 ASSIGNMNETS</h1>
+            <h1>JAVASCRIPT</h1>
             <nav>
                 <ul>
                    <li><a href="week1.html">JS</a></li>
