--- a/week1.html
+++ b/week1.html
@@ -9,7 +9,7 @@
             <h1>JAVASCRIPT</h1>
             <nav>
                 <ul>
-                   <li><a href="week1.html">JS</a></li>
+                   <li><a href="index.html">HOME</a></li>
                 </ul>
             </nav>
         </header>
