--- a/week01/javascript.html
+++ b/week01/javascript.html
@@ -7,9 +7,10 @@
     <body>
         <header>
             <h1>JAVASCRIPT</h1>
+            <h4> Loops, Conditional Statements, Functions, Variables, Parameters, Arrays, Associative Arrays </h4>
             <nav>
                 <ul>
-                   <li><a href="index.html">HOME</a></li>
+                   <li><a href="loop/loop.html">Loops</a></li>
                 </ul>
             </nav>
         </header>
