--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
             <h1>CIT 261 ASSIGNMNETS</h1>
             <nav>
                 <ul>
-                    <li><a href="week1.html">JS</a>
-                    <li><a href="#">WEEK2</a>
-                    <li><a href="#">WEEK3</a>
-                    <li><a href="#">WEEK4</a>
-                    <li><a href="#">WEEK5</a>
-                    <li><a href="#">WEEK6</a>
-                    <li><a href="#">WEEK7</a>
+                    <li><a href="week01/javascript.html">Javascript</a>
                    
                 </ul>
             </nav>
