--- a/week01/javascript.html
+++ b/week01/javascript.html
@@ -14,6 +14,8 @@
                     </li>
                     <li><a href="conditional/conditional.html">Conditional Statements</a>
                     </li>
+                    <li><a href="function/function.html">Function</a>
+                    </li>
                 </ul>
             </nav>
         </header>
