--- a/week01/javascript.html
+++ b/week01/javascript.html
@@ -16,6 +16,8 @@
                     </li>
                     <li><a href="function/function.html">Function</a>
                     </li>
+                    <li><a href="arrays/arrays.html">Arrays</a>
+                    </li>
                 </ul>
             </nav>
         </header>
