--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav>
                 <ul>
                     <li><a href="week01/javascript.html">Javascript</a>
-                   
+                    <li><a href="week02/json/carList.json">cars' JSON</a>
                 </ul>
             </nav>
         </header>
