--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
             <h1>CIT 261 ASSIGNMNETS</h1>
             <nav>
                 <ul>
-                    <li><a href="week01/javascript.html">Javascript</a>
-                    <li><a href="week02/json/carList.json">cars' JSON</a>
+                    <li><a href="week01/javascript.html">Javascript</a></li>
+                    <li><a href="week02/json/json.html">JSON</a>
+                        <ul>
+                            <li><a href="week02/json/parse.html">JSON.parse()</a></li>
+                            <li><a href="week02/json/stringify.html">JSON.stringify()</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </header>
