--- a/week02/json/stringify.html
+++ b/week02/json/stringify.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <head>
+        <meta charset="utf-8">
+        <title>Json</title>
+    </head>
+    <body>
     <header>
         <h1>JSON.stringfy()</h1>
     </header>
