--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
           <title>CIT 261 | Home</title>
           <meta charset="utf-8"/>
-         <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+         
     </head>
     <body>
         
@@ -18,6 +18,7 @@
                             <li><a href="week02/json/stringify.html">JSON.stringify()</a></li>
                         </ul>
                     </li>
+                    <li><a href="JS-Objects/js-objects.html">Javascript Objects</a></li>
                 </ul>
             </nav>
         </header>
