--- a/week02/json/json.html
+++ b/week02/json/json.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Cars</title>
-
-    <link rel="stylesheet" href="styles.css">
+    <title>Json</title>
   </head>
 
   <body>
