--- a/week02/json/parse.html
+++ b/week02/json/parse.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
+    <head>
+    <meta charset="utf-8">
+
+    <title>Json</title>
+    </head>
+    <body>
 
 <h2>Create Object from JSON String</h2>
 
