--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                         </ul>
                     </li>
                     <li><a href="JS-Objects/js-objects.html">Javascript Objects</a></li>
+                    <li><a href="AJAX/regions.json">regions</a></li>
                 </ul>
             </nav>
         </header>
