--- a/week02/json/json.html
+++ b/week02/json/json.html
@@ -39,7 +39,7 @@
           myPara.textContent = 'City: ' + jsonObj['city'] + ' - Course: ' + jsonObj['course'];
           header.appendChild(myPara);
         }
-    /*-----Cars Information----*/
+    /*-----Cars Information----
         
     function showBrands(jsonObj) {
           var brand = jsonObj['Brands'];
@@ -67,6 +67,7 @@
             section.appendChild(myArticle);
           }
         }
+        */
       </script>
   </body>
 </html>
