DOM|API|HTML|AJAX

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
           <title>CIT 261 | Home</title>
           <meta charset="utf-8"/>
-         
+         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
         
@@ -19,7 +19,9 @@
                         </ul>
                     </li>
                     <li><a href="JS-Objects/js-objects.html">Javascript Objects</a></li>
-                    <li><a href="AJAX/regions.json">regions</a></li>
+                    <li><a href="API/api.html">API | DOM</a></li>
+                    <li><a href="AJAX/ajax.html">AJAX</a></li>
+                    <li><a href="HTML/htmlTag.html">HTML Tags</a></li>
                 </ul>
             </nav>
         </header>
