--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
                     </li>
                     <li class="list"><a class="link" href="JS-Objects/js-objects.html">Javascript Objects</a></li>
                     <li class="list"><a class="link" href="API/api.html">API | DOM</a></li>
+                    <li class="list"><a class="link" href="HTML/htmlTag.html">HTML Tags</a>
+                    </li>
                     <li class="list"><a class="link" href="AJAXCSS/ajaxCSS.html">AJAX</a></li>
-                    <li class="list"><a class="link" href="HTML/htmlTag.html">HTML Tags</a></li>
                 </ul>
             </nav>
         </header>
