--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li class="list"><a class="link" href="API/api.html">API | DOM</a></li>
                     <li class="list"><a class="link" href="HTML/htmlTag.html">HTML Tags</a>
                     </li>
-                    <li class="list"><a class="link" href="AJAXCSS/ajaxCSS.html">AJAX</a></li>
+                    <li class="list"><a class="link" href="AJAX/regions.json">AJAX</a></li>
                 </ul>
             </nav>
         </header>
