--- a/AJAXCSS/ajaxCSS.html
+++ b/AJAXCSS/ajaxCSS.html
@@ -15,7 +15,7 @@
         </header>
         
         <main>
-                <button onclick="myFunction()">Click Me to SHow the regions</button>
+                <button onclick="myFunction()">Click Me to show the regions</button>
                 <blockquote>
                  <section id="regions">     </section>
                 </blockquote>
