CSS3 Animation & Transition JS

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <li class="list"><a class="link" href="HTML/htmlTag.html">HTML Tags</a>
                     </li>
                     <li class="list"><a class="link" href="AJAXCSS/ajaxCSS.html">AJAX</a></li>
+                    <li class="list"><a class="link" href="CSS3withJS/transition.html">Animations &amp; Transitions with JavaScript</a></li>
                 </ul>
             </nav>
         </header>
