--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                     <li class="list"><a class="link" href="HTML/htmlTag.html">HTML Tags</a>
                     </li>
                     <li class="list"><a class="link" href="AJAXCSS/ajaxCSS.html">AJAX</a></li>
-                     <li class="list"><a class="link" href="JSEvents/setTime.html">JavaScript Events</a></li>
+                    <li class="list"><a class="link" href="JSEvents/setTime.html">JavaScript Events</a></li>
                     <li class="list"><a class="link" href="CSS3withJS/transition.html">Animations &amp; Transitions with JavaScript</a></li>
+                    <li class="list"><a class="link" href="Transitions/Transitions.html">CSS3 Transitions</a></li>
                 </ul>
             </nav>
         </header>
