--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <li class="list"><a class="link" href="JSEvents/setTime.html">JavaScript Events</a></li>
                     <li class="list"><a class="link" href="CSS3withJS/transition.html">Animations &amp; Transitions with JavaScript</a></li>
                     <li class="list"><a class="link" href="Transitions/Transitions.html">CSS3 Transitions</a></li>
+                    <li class="list"><a class="link" href="Transforms/transform.html">CSS3 Transform</a></li>
                 </ul>
             </nav>
         </header>
