--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <li class="list"><a class="link" href="CSS3withJS/transition.html">Animations &amp; Transitions with JavaScript</a></li>
                     <li class="list"><a class="link" href="Transitions/Transitions.html">CSS3 Transitions</a></li>
                     <li class="list"><a class="link" href="Transforms/transform.html">CSS3 Transform</a></li>
+                     <li class="list"><a class="link" href="Animations/Animation.html">CSS3 Animations</a></li>
                 </ul>
             </nav>
         </header>
