--- a/App/index.html
+++ b/App/index.html
@@ -25,8 +25,8 @@
                                         <h2>Enter Your Country</h2>
 
 
-                                                <input id="numb">
-                                                <button type="button" onclick="myFunction()">Submit</button>
+                                                <input id="numb"><br><br>
+                                                <button type="button" onclick="myFunction()">OK</button>
                                                 <p id="demo"></p>                
                                     </div>
 
