--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1 class="title">CIT 261 App</h1>
            
                 <ul>
-                    <li class="list"><a class="link" href="App/index.html">App Link</a>
+                    <li class="list"><a class="link" href="App/AppQuiz.html">App Link</a>
                     </li>
                 </ul>
             </div>            
